# context-orchestrator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_INTEGRITY_VERIFICATION.md  CONTRIBUTING.md  Claude Codeを「第二の自分」にする、Obsidianを脳とし.txt  FEATURES_JA.md  INTEGRATION_TEST_RESULTS.md  LICENSE  NOTEBOOKLM_COMPARISON_ANALYSIS.md  OSS_FILE_CHECKLIST.md  OSS_RELEASE_SUMMARY.md  PHASE15_CODE_REVIEW.md  PHASE15_DETAILED_TASKS.md  PHASE15_IMPLEMENTATION_SUMMARY.md  PLAN_FIRST_RUN_INDEX.md  PLAN_PHASE5_FIX.md  PLAN_PHASE9_FIX.md  QUICKSTART.md  README.md  README_JA.md  README_OSS.md  README_internal.md  RELEASE_MANIFEST.md  SETUP_GUIDE.md  SETUP_VERIFICATION.md  TESTING_ON_GITHUB.md  VERIFICATION_REPORT.md  check_embedding_similarity.py  check_memory_content.py  config.yaml.template  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_embedding_quality.py  test_keyword_cache.py  test_keyword_extraction.py  test_memory_id_fix.py  (+5 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.kiro/specs/dev-knowledge-orchestrator/: PHASE9_FIXES.md  design.md  design.md.bak  issues.md  phase1-9-review.md  requirements.md.bak  tasks.md  tasks.md.bak
Asset/ExternalBrain/: README.md
Asset/ExternalBrain/Playbooks/: Checklist_SSRF_Review_Checklist.md  Pattern_SSRF_Detection_Pattern.md
Asset/ExternalBrain/runtime/: auto_learn.py  playbook_api.py
docs/: phase1-implementation-report.md
docs/plans/: minara-autopilot-experiment.md
docs/progress/: 2026-02-07.md
reports/: embedding_quality.json  precision_baseline.json
reports/baselines/: README.md  mcp_run-20251109-143546.jsonl
scripts/: bench_qam.py  claude_session_ingestor.py  codex_session_ingestor.py  concurrent_test.py  create_precision_baseline.py  doctor.py  e2e_smoke.py  expand_appbrain_scenarios.py  load_scenarios.py  load_test.py  log_bridge.py  mcp_client.py  mcp_replay.py  mcp_stdio.py  measure_qam_coverage.py  performance_profiler.py  quality_review.py  refresh_memory_embeddings.py  run_regression_ci.py  set_memory_type.py  setup.py  setup_cli_recording.ps1  start_log_bridge.ps1  test_embedding_quality_ci.py  test_log_bridge_parser.py  test_log_bridge_real_file.py  test_log_bridge_session_timeout.py  train_rerank_weights.py
scripts/hooks/: suggest_claude_md_hook.ps1
src/: __init__.py  cli.py  config.py  main.py
src/mcp/: __init__.py  protocol_handler.py
src/models/: __init__.py  cli_llm.py  local_llm.py  router.py
src/processing/: __init__.py  chunker.py  classifier.py  indexer.py
src/services/: __init__.py  bookmark_manager.py  consolidation.py  first_run_indexer.py  ingestion.py  obsidian_parser.py  obsidian_watcher.py  project_manager.py  project_memory_pool.py  query_attributes.py  rerankers.py  search.py  session_log_collector.py  session_manager.py  session_summary.py
src/storage/: __init__.py  bm25_index.py  bookmark_storage.py  project_storage.py  vector_db.py
src/utils/: __init__.py  error_handler.py  errors.py  keyword_extractor.py  logger.py  summarization.py  vector_utils.py
tests/: README.md  __init__.py  conftest.py  test_phase3_models.py
tests/e2e/: __init__.py  test_full_workflow.py
tests/scenarios/: README.md  diverse_queries.json  query_runs.json  query_runs_lang_eval.json  scenario_bulk.json  scenario_data.json  scenario_short_term.json
tests/unit/cli/: test_import.py  test_status_noemoji.py
tests/unit/mcp/: __init__.py  test_mcp_search_params.py  test_protocol_handler.py
tests/unit/models/: test_local_llm_embeddings.py
tests/unit/processing/: test_chunker.py  test_indexer.py
(+29 files in other folders)
